--- a/index.html
+++ b/index.html
@@ -43,7 +43,56 @@
                 </nav>
             </div>
         </section>
-        <section class="banner"></section>
+        
+        <section class="banner">
+            <div class="container">
+                <div class="row">
+                    <div class="col-6">
+                        <div class="d-flex text-banner">
+                            <h1><b>Escolha sua comida <b class="color-primary">favorida.</b></b></h1>
+                            <p>
+                                Aproveite nosso cardápio! Escolha o que desejar e recebe em sua casa de forma rápida e segura.
+                            </p>
+                            <div>
+                                <a class="btn btn-yellow mt-4 mr-3">
+                                    Ver Cardápio
+                                </a>
+                                <a href="#" class="btn btn-white btn-icon-left mt-4">
+                                    <span class="icon-left">
+                                        <i class="fa fa-phone"></i>
+                                    </span>
+                                    (77) 9 9860-6069
+                                </a>
+                            </div>
+                        </div>
+                        <a class="btn btn-sm btn-white btn-social mt-4 mr-3">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a class="btn btn-sm btn-white btn-social mt-4 mr-3">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                        <a class="btn btn-sm btn-white btn-social mt-4">
+                            <i class="fab fa-whatsapp"></i>
+                        </a>
+                    </div>
+                    <div class="col-6">
+                        <div class="card-banner"></div>
+                        <div class="d-flex img-banner" >
+                            <img src="./img/burguer.png">
+                        </div>
+                        <div class="card card-case">
+                            "Entrega rápida e funcionários simpáticos."
+                            <br>A comida cheegou quente e <br>
+                            muito saborosa."
+                            <span class="card-case-name">
+                                <b>Thiago Lopes</b>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="servicos" id="servicos"></section>
         <section class="cardapio" id="cardapio"></section>
         <section class="depoimentos" id="depoimentos"></section>
