Implementado card do cardapio

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="row">
                     <div class="col-6">
                         <div class="d-flex text-banner">
-                            <h1><b>Escolha sua comida <b class="color-primary">favorida.</b></b></h1>
+                            <h1><b>Escolha sua comida <b class="color-primary">favorita.</b></b></h1>
                             <p>
                                 Aproveite nosso cardápio! Escolha o que desejar e recebe em sua casa de forma rápida e segura.
                             </p>
@@ -146,6 +146,7 @@
         </section>
 
         <section class="cardapio" id="cardapio">
+            <div class="background-cardapio"></div>
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center mb-5">
@@ -177,7 +178,7 @@
 
                     <div class="col-12">
                         <div class="row" id="itens-cardapio">
-                            <div class="col-3">
+                            <div class="col-3 mb-5">
                                 <div class="card card-item">
                                     <div class="img-produto">
                                         <img src="./img/cardapio/burguers/burger-au-poivre-kit-4-pack.3ca0e39b02db753304cd185638dad518.jpg" />
@@ -188,9 +189,21 @@
                                     <p class="price-produto text-center">
                                         <b >R$ 154,90</b>                                        
                                     </p>
+                                    <div class="add-carrinho">
+                                        <span class="btn-menos"><i class="fas fa-minus"></i></span>
+                                        <span class="add-numero-itens">0</span>
+                                        <span class="btn-mais"><i class="fas fa-plus"></i></span>
+                                        <span class="btn btn-add"><i class="fa fa-shopping-bag"></i></span>
+                                    </div>
                                 </div>
                             </div> 
                         </div>
+                    </div>
+
+                    <div class="col-12 text-center">
+                        <a class="btn-white btn-sm">
+                            ver mais
+                        </a>
                     </div>
 
                 </div>
