--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
         </section>        
 
         <section class="depoimentos" id="depoimentos">
+            <div class="background-depoimentos"></div>
             <div class="container">
                 <div class="row">
 
@@ -241,8 +242,70 @@
                                         </p>
                                     </div>
                                 </div>
+                                <p class="texto-depoimento">
+                                    <i class="fas fa-quote-left" ></i>
+                                    <span>
+                                        Muito bom, recomento dmais! Comida muito bem feita pelo chefe, 
+                                        atendimento dentro dos parâmetros e boa comunicação com o cliente.
+                                    </span>
+                                    <i class="fas fa-quote-right" ></i>
+                                </p>
                             </div>
+
+                            <div class="depoimento hidden" id="depoimento-2">
+                                <div class="container-dados-depoimento" >
+                                    <div class="imagem-depoimento"></div>
+                                    <div>
+                                        <p class="nome-depoimento" ><b>Ana Beatriz</b></p>
+                                        <p class="nota-depoimento" >
+                                            <i class="fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+                                            <i class="fas fa-star" ></i>&nbsp; <span>5.0</span>
+                                        </p>
+                                    </div>
+                                </div>
+                                <p class="texto-depoimento">
+                                    <i class="fas fa-quote-left" ></i>
+                                    <span>
+                                        Um jantar perfeito do começo ao fim. Comida, expêriencia, serviço...
+                                        foi tão maravilhoso que fomos dois dias seguidos - fato inédito para mim em uma viagem.
+                                    </span>
+                                    <i class="fas fa-quote-right" ></i>
+                                </p>
+                            </div>
+
+                            <div class="depoimento hidden" id="depoimento-3">
+                                <div class="container-dados-depoimento" >
+                                    <div class="imagem-depoimento"></div>
+                                    <div>
+                                        <p class="nome-depoimento" ><b>João Guilherme</b></p>
+                                        <p class="nota-depoimento" >
+                                            <i class="fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+                                            <i class="fas fa-star"></i>
+                                            <i class="far fa-star" ></i>&nbsp; <span>4.5</span>
+                                        </p>
+                                    </div>
+                                </div>
+                                <p class="texto-depoimento">
+                                    <i class="fas fa-quote-left" ></i>
+                                    <span>
+                                        A comida estava execelente e o serviço gentil nos surpeende!
+                                        Dica: reserve umas 3 horas para ter uma expêriencia incrível.
+                                    </span>
+                                    <i class="fas fa-quote-right" ></i>
+                                </p>
+                            </div>
+
                         </div>
+
+                        <a class="btn btn-sm btn-white btn-social mr-3 active">1</a>
+                        <a class="btn btn-sm btn-white btn-social mr-3">2</a>
+                        <a class="btn btn-sm btn-white btn-social">3</a>
+
                     </div>
 
                 </div>
