--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     </div>
 
                     <div class="col-12 text-center">
-                        <a class="btn-white btn-sm">
+                        <a id="btnVerMais" class="btn btn-white btn-sm" onclick="cardapio.metodos.verMais()">
                             ver mais
                         </a>
                     </div>
