--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
 
                     </div>
 
-                    <div id="resumoCarrinho" class="row mr-0 ml-0" >
+                    <div id="resumoCarrinho" class="row mr-0 ml-0 hidden" >
                         <div class="col-12">
                             <p class="title-carrinho mt-4">
                                 <b>Itens do pedido:</b>
@@ -564,16 +564,16 @@
                         </p>
                     </div>
 
-                    <a class="btn btn-yellow float-right" id="btn-EtapaPedido">
+                    <a onclick="cardapio.metodos.carregarEtapa(2)" class="btn btn-yellow float-right" id="btnEtapaPedido">
                         Continuar
                     </a>
-                    <a class="btn btn-yellow float-right hidden" id="btn-EtapaEndereco">
+                    <a onclick="cardapio.metodos.carregarEtapa(3)" class="btn btn-yellow float-right hidden" id="btnEtapaEndereco">
                         Revisar pedido
                     </a>
-                    <a class="btn btn-yellow float-right hidden" id="btn-EtapaResumo">
+                    <a class="btn btn-yellow float-right hidden" id="btnEtapaResumo">
                         Enviar pedido
                     </a>
-                    <a class="btn btn-white float-right mr-3 hidden" id="btnVoltar">
+                    <a onclick="cardapio.metodos.voltarEtapa()" class="btn btn-white float-right mr-3 hidden" id="btnVoltar">
                         Voltar
                     </a>                    
 
