--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Restaurante - Seja bem vindo</title>
+
         <link rel="stylesheet" href="./css/bootstrap.min.css">
         <link rel="stylesheet" href="./css/fontawesome.css">
-        <link rel="stylesheet" href="./css/main.css">
         <link rel="stylesheet" href="./css/animate.css">
+        <link rel="stylesheet" href="./css/animate.css">
+
+        <link rel="stylesheet" href="./css/main.css">
+        <link rel="stylesheet" href="./css/responsivo.css">
     </head>
     <body>
 
@@ -57,7 +64,7 @@
         <section class="banner">
             <div class="container">
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-lg-6 col-md-6 col-sm-12 col-12">
                         <div class="d-flex text-banner">
                             <h1 class="wow fadeInLeft" ><b>Escolha sua comida <b class="color-primary">favorita.</b></b></h1>
                             <p class="wow fadeInLeft delay-02s">
